--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build_frontend:
         - -c
         - dockerd-entrypoint.sh --insecure-registry $CI_REGISTRY || exit
   script:
-    - cd react  # Naviguer vers le répertoire du frontend
+    - cd face-recog-app  # Naviguer vers le répertoire du frontend
     - echo "Building frontend Docker image..."
     - docker build -t $CI_REGISTRY_IMAGE/frontend .
   artifacts:
