--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ push_backend:
     - name: docker:24.0.7-dind
   script:
     - echo "Pushing $CI_REGISTRY_IMAGE/backend backend image to registry..."
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+    - docker login  -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" http://$CI_REGISTRY
     - docker push $CI_REGISTRY_IMAGE/backend:latest
 
 # ------------------------
@@ -84,5 +84,5 @@ push_frontend:
     - name: docker:24.0.7-dind
   script:
     - echo "Pushing frontend image to registry..."
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+    - docker login  -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" http://$CI_REGISTRY
     - docker push $CI_REGISTRY_IMAGE/frontend:latest
