--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,15 +43,29 @@ push_backend:
 # ------------------------
 # PACKAGE REGISTRY JOBS
 # ------------------------
+
+
 package_registry_Backend:
   stage: package_registry
-  image: python:3.8  # Use a Python Docker image
+  image: python:3.8  # Use an appropriate Python image
   script:
-    - echo "Publishing package to GitLab registry..."
-    - pip install --upgrade setuptools wheel twine build  # Install necessary packaging tools
-    - python -m build  # Build your package using the pyproject.toml
-    - twine upload --repository-url https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/* -u __token__ -p ${CI_JOB_TOKEN}  # Upload to GitLab PyPi registry
-    - ls -al dist/  # List the built package files for verification
+    - echo "Publishing Python package to GitLab registry..."
+    
+    # Install build tools
+    - pip install setuptools wheel twine
+
+    # If you have a requirements file, install dependencies (optional)
+    - pip install -r requirements.txt
+
+    # Build the Python package (this will use pyproject.toml to build)
+    - python -m build  # Uses pyproject.toml to create the package
+
+    # Publish the package to GitLab's PyPI registry
+    - twine upload --repository-url https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/* -u ${CI_JOB_TOKEN}
+
+    # Optionally list the contents of the 'dist' folder to verify package build
+    - ls -al dist/
+
 
 
 
