--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,24 +47,33 @@ push_backend:
 
 package_registry_Backend:
   stage: package_registry
-  image: python:3.8  # Use an appropriate Python image
+  image: python:3.8
   script:
     - echo "Publishing Python package to GitLab registry..."
-    
-    # Install build tools
+
+    # Install system dependencies for dlib
+    - apt-get update
+    - apt-get install -y cmake build-essential
+
+    # Install pip dependencies
+    - pip install --upgrade pip
     - pip install setuptools wheel twine
 
     # If you have a requirements file, install dependencies (optional)
     - pip install -r requirements.txt
 
-    # Build the Python package (this will use pyproject.toml to build)
-    - python -m build  # Uses pyproject.toml to create the package
+    # Install dlib
+    - pip install dlib
+
+    # Build the Python package
+    - python -m build
 
     # Publish the package to GitLab's PyPI registry
     - twine upload --repository-url https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/* -u ${CI_JOB_TOKEN}
 
     # Optionally list the contents of the 'dist' folder to verify package build
     - ls -al dist/
+
 
 
 
