--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,31 +47,24 @@ push_backend:
 
 package_registry_Backend:
   stage: package_registry
-  image: python:3.8
+  image: python:3.8  # Use an appropriate Python version
   script:
     - echo "Publishing Python package to GitLab registry..."
 
-    # Install system dependencies for dlib
-    - apt-get update
-    - apt-get install -y cmake build-essential
-
-    # Install pip dependencies
+    # Install required tools
     - pip install --upgrade pip
     - pip install setuptools wheel twine
 
-    # If you have a requirements file, install dependencies (optional)
+    # Install dependencies from requirements.txt if available (optional)
     - pip install -r requirements.txt
 
-    # Install dlib
-    - pip install dlib
+    # Build the Python package using pyproject.toml
+    - python -m build  # This will create the dist/ directory with .tar.gz and .whl files
 
-    # Build the Python package
-    - python -m build
-
-    # Publish the package to GitLab's PyPI registry
+    # Publish the package to GitLab PyPI registry
     - twine upload --repository-url https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/* -u ${CI_JOB_TOKEN}
 
-    # Optionally list the contents of the 'dist' folder to verify package build
+    # List the contents of the dist directory to verify the build
     - ls -al dist/
 
 
