--- a/face-recog-app/package.json
+++ b/face-recog-app/package.json
@@ -50,5 +50,8 @@
     "postcss": "^8.4.47",
     "serve": "^14.2.3",
     "tailwindcss": "^3.4.14"
+  },
+  "publishConfig": {
+    "registry": "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/"
   }
 }
