--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ package_registry_Backend:
     - echo "Creating and pushing a tarball to GitLab's generic package registry..."
 
     # Create the tarball of your project directory
-    - tar -czvf your-package.tar.gz .
+    - tar -czvf Face_Recognition_App.tar.gz .
 
     # Verify that the tarball was created
     - ls -al
@@ -62,7 +62,7 @@ package_registry_Backend:
     # Upload the tarball using `curl`
     - echo "Uploading tarball to GitLab's generic package registry..."
     - >
-      curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file your-package.tar.gz
+      curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file Face_Recognition_App.tar.gz
       "https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/generic/your-package-name/1.0/your-package.tar.gz"
 
     # List contents to verify
